--- a/movieGuide/Base.lproj/Main.storyboard
+++ b/movieGuide/Base.lproj/Main.storyboard
@@ -59,6 +59,7 @@
                                             <outlet property="overviewLabel" destination="U2p-OM-8fE" id="dn8-hA-bh6"/>
                                             <outlet property="posterImageView" destination="dV5-Iz-Jug" id="EBH-xo-CKK"/>
                                             <outlet property="titleLabel" destination="igg-v6-QH3" id="rGp-lL-C5d"/>
+                                            <segue destination="FgJ-JS-yMX" kind="show" id="S7L-ac-8V5"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -75,10 +76,10 @@
             </objects>
             <point key="canvasLocation" x="1047.2" y="38.23088455772114"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="iMZ-96-HlE">
             <objects>
-                <viewController id="FgJ-JS-yMX" sceneMemberID="viewController">
+                <viewController id="FgJ-JS-yMX" customClass="DetailViewController" customModule="movieGuide" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ewv-9j-0Qh"/>
                         <viewControllerLayoutGuide type="bottom" id="9gi-EC-dcM"/>
@@ -86,8 +87,46 @@
                     <view key="view" contentMode="scaleToFill" id="lFR-GC-0gh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="nVP-9r-9AH">
+                                <rect key="frame" x="0.0" y="64" width="375" height="333"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2JW-5C-Bxp">
+                                <rect key="frame" x="38" y="296" width="121" height="189"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="day-Ys-ZYd">
+                                <rect key="frame" x="175" y="405" width="184" height="51"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Overview" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wCq-S6-STT">
+                                <rect key="frame" x="26" y="524" width="333" height="123"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oz-WA-JTS">
+                                <rect key="frame" x="175" y="464" width="99" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="backDropImageView" destination="nVP-9r-9AH" id="VqD-XX-tUc"/>
+                        <outlet property="overview" destination="wCq-S6-STT" id="g3F-hf-SeV"/>
+                        <outlet property="posterImageView" destination="2JW-5C-Bxp" id="BeI-Nm-BO1"/>
+                        <outlet property="releaseDateLabel" destination="5Oz-WA-JTS" id="fz6-OJ-EVD"/>
+                        <outlet property="titleLabel" destination="day-Ys-ZYd" id="grf-Ha-UFE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CWv-RC-DW7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
