--- a/movieGuide/Base.lproj/Main.storyboard
+++ b/movieGuide/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="5Xc-d3-Hn6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F2073" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="NGa-Lh-tEl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -39,7 +39,7 @@
                                                     <color key="backgroundColor" red="0.34859067199999999" green="0.54448086019999997" blue="0.5765362382" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="The Circle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="igg-v6-QH3">
-                                                    <rect key="frame" x="117" y="8" width="238" height="23"/>
+                                                    <rect key="frame" x="117" y="8" width="180" height="23"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
                                                     <nil key="textColor"/>
@@ -53,11 +53,19 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="7.6" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="goY-jL-vye">
+                                                    <rect key="frame" x="345" y="0.0" width="47" height="34"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="thin" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="overviewLabel" destination="U2p-OM-8fE" id="dn8-hA-bh6"/>
                                             <outlet property="posterImageView" destination="dV5-Iz-Jug" id="EBH-xo-CKK"/>
+                                            <outlet property="ratingLabel" destination="goY-jL-vye" id="0Cb-Cc-EMd"/>
                                             <outlet property="titleLabel" destination="igg-v6-QH3" id="rGp-lL-C5d"/>
                                             <segue destination="FgJ-JS-yMX" kind="show" id="S7L-ac-8V5"/>
                                         </connections>
@@ -74,7 +82,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1047.2" y="38.23088455772114"/>
+            <point key="canvasLocation" x="1986.4000000000001" y="38.23088455772114"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="iMZ-96-HlE">
@@ -103,17 +111,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="highlightedColor" red="0.65222259169999997" green="0.59960265899999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="day-Ys-ZYd">
-                                <rect key="frame" x="168" y="341" width="184" height="51"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oz-WA-JTS">
+                                <rect key="frame" x="26" y="434" width="99" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="highlightedColor" red="0.65222259169999997" green="0.59960265899999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Release date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Oz-WA-JTS">
-                                <rect key="frame" x="168" y="400" width="99" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Movie title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="day-Ys-ZYd">
+                                <rect key="frame" x="166" y="299" width="193" height="122"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="highlightedColor" red="0.65222259169999997" green="0.59960265899999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </label>
@@ -131,12 +139,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CWv-RC-DW7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1720.8" y="40.929535232383813"/>
+            <point key="canvasLocation" x="2660" y="40.929535232383813"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Now Playing-->
         <scene sceneID="tc5-kK-nDb">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5Xc-d3-Hn6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Now Playing" selectedImage="now_playing_tabbar_item" id="Tyy-Py-Dzu"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Itm-sB-Sdk">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -149,7 +158,66 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tMv-oc-JOb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.2" y="38.23088455772114"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="EOo-7i-c8e">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="NGa-Lh-tEl" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="m4b-Ot-v5o">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="5Xc-d3-Hn6" kind="relationship" relationship="viewControllers" id="eag-cq-doo"/>
+                        <segue destination="m8Z-hd-GBM" kind="relationship" relationship="viewControllers" id="hMS-87-dKn"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NdB-nR-zgd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="108" y="38.23088455772114"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="7S0-tN-37h">
+            <objects>
+                <viewController id="6ab-fD-ubC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="O06-Bf-5jZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="OeS-pW-tW8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ytP-Y1-yEt">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="M7G-vE-esv"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5sm-yQ-Las" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1047.2" y="880.20989505247383"/>
+        </scene>
+        <!--Most Popular-->
+        <scene sceneID="sM1-mn-yrN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="m8Z-hd-GBM" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Most Popular" selectedImage="now_playing_tabbar_item" id="DzR-NY-dh0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IRH-7C-wq3">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="6ab-fD-ubC" kind="relationship" relationship="rootViewController" id="6f0-4F-iVW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sPg-yN-aGf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="108" y="880.20989505247383"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="now_playing_tabbar_item" width="21" height="21"/>
+    </resources>
 </document>
